--- a/front/web/scss/pages/_home.scss
+++ b/front/web/scss/pages/_home.scss
@@ -1,9 +1,14 @@
 section {
-  .slide {
+  &.slide {
     width: 100%;
+    max-width: none;
+    background-color: #FCFCFC;
+    height: 1000px;
   }
+}
 
-  &:nth-of-type(2n) {
-    background-color: #FE4B74;
-  }
+footer {
+  width: 100%;
+  height: 200px;
+  background-color: #E8E8E8;
 }
