--- a/front/web/scss/pages/_home_blog.scss
+++ b/front/web/scss/pages/_home_blog.scss
@@ -1,54 +1,12 @@
-/* Others */
-* {
-  box-sizing: border-box; }
-
-html {
-  font-size: 10px; }
-
-body {
-  position: relative;
-  font-family: "Open Sans", sans-serif; }
-
-/* Utils */
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-
-.vcenter {
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%); }
-
-.hcenter {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0); }
-
-/* Components */
-/* Pages */
-section.slide {
-  width: 100%;
-  max-width: none;
-  background-color: #FCFCFC;
-  height: 1000px; }
-
-footer {
-  width: 100%;
-  height: 200px;
-  background-color: #E8E8E8; }
-
 #about {
-  background-color: #FFFFFF; }
-
-#about {
-  background-color: #FFFFFF; }
+  background-color: #FFFFFF;
+}
 
 .timeline {
   list-style: none;
   padding: 20px 0 20px;
-  position: relative; }
+  position: relative;
+}
 
 .timeline:before {
   top: 0;
@@ -58,27 +16,33 @@ footer {
   width: 3px;
   background-color: #eeeeee;
   left: 50%;
-  margin-left: -1.5px; }
+  margin-left: -1.5px;
+}
 
 .timeline > li {
   margin-bottom: 20px;
-  position: relative; }
+  position: relative;
+}
 
 .timeline > li:before,
 .timeline > li:after {
   content: " ";
-  display: table; }
+  display: table;
+}
 
 .timeline > li:after {
-  clear: both; }
+  clear: both;
+}
 
 .timeline > li:before,
 .timeline > li:after {
   content: " ";
-  display: table; }
+  display: table;
+}
 
 .timeline > li:after {
-  clear: both; }
+  clear: both;
+}
 
 .timeline > li > .timeline-panel {
   width: 46%;
@@ -88,7 +52,8 @@ footer {
   padding: 20px;
   position: relative;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175); }
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
 
 .timeline > li > .timeline-panel:before {
   position: absolute;
@@ -99,7 +64,8 @@ footer {
   border-left: 15px solid #ccc;
   border-right: 0 solid #ccc;
   border-bottom: 15px solid transparent;
-  content: " "; }
+  content: " ";
+}
 
 .timeline > li > .timeline-panel:after {
   position: absolute;
@@ -110,7 +76,8 @@ footer {
   border-left: 14px solid #fff;
   border-right: 0 solid #fff;
   border-bottom: 14px solid transparent;
-  content: " "; }
+  content: " ";
+}
 
 .timeline > li > .timeline-badge {
   color: #fff;
@@ -128,65 +95,57 @@ footer {
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%; }
+  border-bottom-left-radius: 50%;
+}
 
 .timeline > li.timeline-inverted > .timeline-panel {
-  float: right; }
+  float: right;
+}
 
 .timeline > li.timeline-inverted > .timeline-panel:before {
   border-left-width: 0;
   border-right-width: 15px;
   left: -15px;
-  right: auto; }
+  right: auto;
+}
 
 .timeline > li.timeline-inverted > .timeline-panel:after {
   border-left-width: 0;
   border-right-width: 14px;
   left: -14px;
-  right: auto; }
+  right: auto;
+}
 
 .timeline-badge.primary {
-  background-color: #2e6da4 !important; }
+  background-color: #2e6da4 !important;
+}
 
 .timeline-badge.success {
-  background-color: #3f903f !important; }
+  background-color: #3f903f !important;
+}
 
 .timeline-badge.warning {
-  background-color: #f0ad4e !important; }
+  background-color: #f0ad4e !important;
+}
 
 .timeline-badge.danger {
-  background-color: #d9534f !important; }
+  background-color: #d9534f !important;
+}
 
 .timeline-badge.info {
-  background-color: #5bc0de !important; }
+  background-color: #5bc0de !important;
+}
 
 .timeline-title {
   margin-top: 0;
-  color: inherit; }
+  color: inherit;
+}
 
 .timeline-body > p,
 .timeline-body > ul {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 .timeline-body > p + p {
-  margin-top: 5px; }
-
-#hero {
-  height: 75vh;
-  background-color: #363636; }
-  #hero .container {
-    height: 100%; }
-  #hero .row {
-    height: 100%; }
-    #hero .row > div {
-      height: 100%;
-      position: relative; }
-  #hero .overlay {
-    background: white;
-    background: rgba(255, 255, 255, 0.4);
-    min-height: 100%; }
-
-#shuwee {
-  background-color: #EFEFEF; }
-
-/*# sourceMappingURL=styles.css.map */
+  margin-top: 5px;
+}
