--- a/front/web/scss/styles.scss
+++ b/front/web/scss/styles.scss
@@ -4,7 +4,11 @@
 @import "_global.scss";
 
 /* Components */
+@import "components/_nav.scss";
 
 /* Pages */
 @import "pages/_home.scss";
-@import "pages/_home_intro.scss";
+@import "pages/_home_about.scss";
+@import "pages/_home_blog.scss";
+@import "pages/_home_hero.scss";
+@import "pages/_home_shuwee.scss";
