--- a/front/web/scss/_global.scss
+++ b/front/web/scss/_global.scss
@@ -3,12 +3,31 @@
 }
 
 html{
-  font-size: 10px;
 }
 
 body {
   position: relative;
-  font-family: "Open Sans", sans-serif;
+  font-size: 14px/1.625;
+  font-family: "Raleway","Helvetica Neue",sans-serif;
+  color: #828B90;
+}
+
+a {
+  color: #828B90;
+
+  &hover {
+
+  }
+}
+section {
+  &.slide {
+    width: 100%;
+    max-width: none;
+    background-color: #FCFCFC;
+    height: 1000px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 /* Utils */
