--- a/front/web/scss/_global.scss
+++ b/front/web/scss/_global.scss
@@ -15,18 +15,27 @@ body {
 a {
   color: #828B90;
 
-  &hover {
-
+  &:hover {
+    color: #333;
+    text-decoration: none;
+  }
+  &:focus {
+    color: #333;
+    text-decoration: none;
+  }
+  &:active {
+    color: #333;
+    text-decoration: none;
   }
 }
+
 section {
   &.slide {
     width: 100%;
     max-width: none;
     background-color: #FCFCFC;
-    height: 1000px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
 
