--- a/front/web/scss/_global.scss
+++ b/front/web/scss/_global.scss
@@ -18,24 +18,17 @@ a {
   &:hover {
     color: #333;
     text-decoration: none;
+    outline: none;
   }
   &:focus {
     color: #333;
     text-decoration: none;
+    outline: none;
   }
   &:active {
     color: #333;
     text-decoration: none;
-  }
-}
-
-section {
-  &.slide {
-    width: 100%;
-    max-width: none;
-    background-color: #FCFCFC;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    outline: none;
   }
 }
 
