--- a/front/web/scss/components/_footer.scss
+++ b/front/web/scss/components/_footer.scss
@@ -1,5 +1,13 @@
 footer {
   width: 100%;
-  height: 200px;
   background-color: #E8E8E8;
+
+  .container {
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    span {
+      color: #E25465;
+    }
+  }
 }
