--- a/front/web/scss/pages/_home_hero.scss
+++ b/front/web/scss/pages/_home_hero.scss
@@ -1,7 +1,7 @@
 #hero {
   height: 75vh;
 
-  background-color: #363636;
+  background: #363636 url(http://blog.wanjee.be/themes/uno/assets/images/background-cover.jpg) no-repeat center center / cover;
 
   .container {
     height: 100%;
