--- a/back/web/scss/pages/_home_hero.scss
+++ b/back/web/scss/pages/_home_hero.scss
@@ -1,7 +1,7 @@
 #hero {
   height: 75vh;
 
-  background: #363636 url(http://blog.wanjee.be/themes/uno/assets/images/background-cover.jpg) no-repeat center center / cover;
+  background: #363636 url(../img/intro_bg_.jpg) no-repeat center center / cover;
 
   .container {
     height: 100%;
