--- a/back/web/scss/components/_nav.scss
+++ b/back/web/scss/components/_nav.scss
@@ -4,6 +4,10 @@ nav {
 
     background-color: rgba(0, 0, 0, 0.7);
 
+    &.transparent {
+      background: none;
+    }
+
     &.nav-visible {
 
     }
