--- a/www/web/scss/pages/_home_hero.scss
+++ b/www/web/scss/pages/_home_hero.scss
@@ -1,7 +1,7 @@
 #hero {
   height: 75vh;
 
-  background: #363636 url(../img/intro_bg_.jpg) no-repeat center center / cover;
+  background-color: #363636;
 
   .container {
     height: 100%;
