--- a/www/app/Resources/views/base.html.twig
+++ b/www/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
 
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/vendors.min.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/app.min.css') }}'">
+        <link rel="stylesheet" href="{{ asset('css/app.min.css') }}">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,200,400,500,700,800">
     {% endblock %}
@@ -18,7 +18,7 @@
 
 <body data-spy="scroll" data-target="#navigation-main">
 
-{% include 'partial/footer.html.twig' %}
+{% include 'partial/navbar.html.twig' %}
 
 {% block content %}{% endblock %}
 
