--- a/www/web/scss/styles.scss
+++ b/www/web/scss/styles.scss
@@ -3,8 +3,12 @@
 /* Others */
 @import "global";
 
+/* Fonts */
+@import "icomoon";
+
 /* Components */
 @import "components/nav";
+@import "components/social";
 @import "components/footer";
 
 /* Pages */
