Animate hero; Hide brand when on hero (avoid duplicate info there); Fix centering helpers

--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -1,125 +1,144 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-<section class="slide" id="hero" data-navbar-style="hero">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="vcenter">
-                    <h1>Wanjee</h1>
-
-                    <h2>Web artisan</h2>
-                    <a href="#about" target="_self">Get to know me</a>
-                    <a href="#blog" target="_self">Blog</a>
+    <section class="slide" id="hero" data-navbar-style="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="vcenter hero-content-inner">
+                        <h1>Wanjee</h1>
+                        <h2>Web artisan</h2>
+                        <div class="actions-wrapper">
+                            <a class="btn btn-default" href="#blog" target="_self">Blog</a>
+                            <a class="btn btn-default" href="#about" target="_self">Get to know me</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="slide container-fluid" id="blog">
-    <div class="container">
-        <h1>To quality and beyond</h1>
-        <div class="lead">Quality focused small posts about PHP projects (Symfony, Drupal) and web development best practices in general.</div>
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
-                <article class="post">
-                    <div class="meta">
-                        <time datetime="2015-09-24">2015-09-24</time>
-                    </div>
+    <section class="slide container-fluid" id="blog">
+        <div class="container">
+            <h1>To quality and beyond</h1>
 
-                    <div class="img-container">
-                        <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
-                    </div>
+            <div class="lead">Quality focused small posts about PHP projects (Symfony, Drupal) and web development best
+                practices in general.
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <article class="post">
+                        <div class="meta">
+                            <time datetime="2015-09-24">2015-09-24</time>
+                        </div>
 
-                    <div class="copy-container">
-                        <div class="copy">
-                            <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
-                            <div class="excerpt">
-                                Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor. Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped modis volor.
+                        <div class="img-container">
+                            <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
+                        </div>
+
+                        <div class="copy-container">
+                            <div class="copy">
+                                <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
+
+                                <div class="excerpt">
+                                    Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor.
+                                    Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped
+                                    modis volor.
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-                </article>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <article class="post">
-                    <div class="meta">
-                        <time datetime="2015-09-24">2015-09-24</time>
-                    </div>
+                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right"
+                                                                         aria-hidden="true"></span></a>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <article class="post">
+                        <div class="meta">
+                            <time datetime="2015-09-24">2015-09-24</time>
+                        </div>
 
-                    <div class="img-container">
-                        <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
-                    </div>
+                        <div class="img-container">
+                            <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
+                        </div>
 
-                    <div class="copy-container">
-                        <div class="copy">
-                            <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
-                            <div class="excerpt">
-                                Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor. Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped modis volor.
+                        <div class="copy-container">
+                            <div class="copy">
+                                <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
+
+                                <div class="excerpt">
+                                    Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor.
+                                    Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped
+                                    modis volor.
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-                </article>
-            </div>
-            <div class="col-md-6 col-lg-4 hidden-md">
-                <article class="post">
-                    <div class="meta">
-                        <time datetime="2015-09-24">2015-09-24</time>
-                    </div>
+                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right"
+                                                                         aria-hidden="true"></span></a>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-4 hidden-md">
+                    <article class="post">
+                        <div class="meta">
+                            <time datetime="2015-09-24">2015-09-24</time>
+                        </div>
 
-                    <div class="img-container">
-                        <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
-                    </div>
+                        <div class="img-container">
+                            <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
+                        </div>
 
-                    <div class="copy-container">
-                        <div class="copy">
-                            <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
-                            <div class="excerpt">
-                                Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor. Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped modis volor.
+                        <div class="copy-container">
+                            <div class="copy">
+                                <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
+
+                                <div class="excerpt">
+                                    Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor.
+                                    Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped
+                                    modis volor.
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-                </article>
+                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right"
+                                                                         aria-hidden="true"></span></a>
+                    </article>
+                </div>
             </div>
-        </div>
-        <p class="text-center">
-            <a class="btn btn-default" href="#!/posts">See all posts</a>
-        </p>
-    </div>
-</section>
-
-<section class="slide" id="about">
-    <div class="container">
-        <figure id="myself">
-            <img src="{{ asset('img/avatar.jpg') }}" alt="Me, Myself and I">
-        </figure>
-        <h1>Wanjee</h1>
-        <div class="lead">
-            <p>
-                PHP developer, working mostly with <a href="http://symfony.com/">Symfony</a><br>
-                Technical expert at <a href="http://www.emakina.be/">Emakina.be</a> for PHP technologies<br>
-            </p>
-            <p>
-                Curious developer. PHP evangelist. Symfony2 fan.<br>
-                Best practices guru. Team player. Open source enthousiast.<br>
+            <p class="text-center">
+                <a class="btn btn-default" href="#!/posts">See all posts</a>
             </p>
         </div>
-        {% include 'partial/social.html.twig' %}
-    </div>
-</section>
+    </section>
 
-<section class="slide" id="shuwee">
-    <div class="container">
-        <h1>Shuwee</h1>
-        <div class="lead">
-            The name comes from a Lakota word : čhuwí. It is defined as the upper back of the body.<br>
-            Shuwee is aimed to manage website data in a <abbr title="Keep it simple, stupid">KISS</abbr> way.
+    <section class="slide" id="about">
+        <div class="container">
+            <figure id="myself">
+                <img src="{{ asset('img/avatar.jpg') }}" alt="Me, Myself and I">
+            </figure>
+            <h1>Wanjee</h1>
+
+            <div class="lead">
+                <p>
+                    PHP developer, working mostly with <a href="http://symfony.com/">Symfony</a><br>
+                    Technical expert at <a href="http://www.emakina.be/">Emakina.be</a> for PHP technologies<br>
+                </p>
+
+                <p>
+                    Curious developer. PHP evangelist. Symfony2 fan.<br>
+                    Best practices guru. Team player. Open source enthousiast.<br>
+                </p>
+            </div>
+            {% include 'partial/social.html.twig' %}
         </div>
-    </div>
-</section>
+    </section>
+
+    <section class="slide" id="shuwee">
+        <div class="container">
+            <h1>Shuwee</h1>
+
+            <div class="lead">
+                The name comes from a Lakota word : čhuwí. It is defined as the upper back of the body.<br>
+                Shuwee is aimed to manage website data in a <abbr title="Keep it simple, stupid">KISS</abbr> way.
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
