--- a/www/web/scss/components/_nav.scss
+++ b/www/web/scss/components/_nav.scss
@@ -6,6 +6,10 @@ nav {
 
     &.transparent {
       background: none;
+
+      .navbar-brand {
+        display: none;
+      }
     }
 
     &.nav-visible {
