Add some colors !; Add test hero background image;

--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -9,8 +9,8 @@
                         <h1>Wanjee</h1>
                         <h2>Web artisan</h2>
                         <div class="actions-wrapper">
-                            <a class="btn btn-default" href="#blog" target="_self">Blog</a>
-                            <a class="btn btn-default" href="#about" target="_self">Get to know me</a>
+                            <a class="btn btn-primary" href="#blog" target="_self">Blog</a>
+                            <a class="btn btn-success" href="#about" target="_self">Get to know me</a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <p class="text-center">
-                <a class="btn btn-default" href="#!/posts">See all posts</a>
+                <a class="btn btn-primary" href="#!/posts">See all posts</a>
             </p>
         </div>
     </section>
@@ -138,6 +138,35 @@
                 The name comes from a Lakota word : čhuwí. It is defined as the upper back of the body.<br>
                 Shuwee is aimed to manage website data in a <abbr title="Keep it simple, stupid">KISS</abbr> way.
             </div>
+{#
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    Picture
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <h2>Easy to setup</h2>
+                    Text
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-md-push-6">
+                    Picture
+                </div>
+                <div class="col-xs-12 col-md-6 col-md-pull-6">
+                    <h2>Easy to use</h2>
+                    Text
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    Picture
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <h2>Easy to use</h2>
+                    Text
+                </div>
+            </div>
+#}
         </div>
     </section>
 
