--- a/www/web/scss/pages/_home_blog.scss
+++ b/www/web/scss/pages/_home_blog.scss
@@ -1,5 +1,5 @@
 #blog {
-  background-color: #EAEBEB;
+  background-color: #F9F9F9;
 
   text-align: center;
 
@@ -11,7 +11,7 @@
 
 .post {
   margin-bottom: 15px;
-  background-color: #FFF;
+  background-color: #FFFFFF;
   border: 1px solid #dddddd;
   border-radius: 4px;
   text-align: left;
@@ -44,6 +44,7 @@
   }
 
   a.link {
+    color: #0FA2CE;
     display: block;
     border-top: 1px solid #dddddd;
     padding: 15px;
@@ -55,8 +56,9 @@
     }
 
     &:hover {
+      color: darken(#0FA2CE, 10%);
       span {
-        color: #333;
+        color: darken(#0FA2CE, 10%);
         padding-left: 5px;
       }
     }
