--- a/www/web/scss/pages/_home_hero.scss
+++ b/www/web/scss/pages/_home_hero.scss
@@ -1,7 +1,8 @@
 #hero {
   height: 75vh;
 
-  background-color: #363636;
+  background: #363636 url(../img/hero.jpg) no-repeat center center / cover;
+
 
 
   .container {
@@ -10,6 +11,7 @@
 
   .row {
     height: 100%;
+    color: #F9F9F9;
 
     h1 {
       text-align: center;
@@ -34,7 +36,6 @@
         margin: 80px 0 40px 0;
 
         a.btn {
-
 
         }
       }
