Progress on Shuwee section (copy and layout)

--- a/www/web/scss/pages/_home_shuwee.scss
+++ b/www/web/scss/pages/_home_shuwee.scss
@@ -1,7 +1,29 @@
 #shuwee {
   background-color: #F9F9F9;
 
-  height: 1000px;
-
   text-align: center;
+
+  .row {
+    &.feature {
+      margin-top: 30px;
+      margin-bottom: 30px;
+
+      .description {
+        padding: 20px 30px;
+        text-align: left;
+      }
+
+      figure {
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+
+        figcaption {
+          font-size: 12px;
+        }
+      }
+    }
+
+  }
 }
