--- a/www/web/scss/styles.scss
+++ b/www/web/scss/styles.scss
@@ -16,4 +16,5 @@
 @import "pages/home_about";
 @import "pages/home_blog";
 @import "pages/home_hero";
+@import "pages/home_simplicity";
 @import "pages/home_shuwee";
