--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -47,8 +47,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right"
-                                                                         aria-hidden="true"></span></a>
+                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -72,8 +71,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right"
-                                                                         aria-hidden="true"></span></a>
+                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-4 hidden-md">
@@ -97,8 +95,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right"
-                                                                         aria-hidden="true"></span></a>
+                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
                     </article>
                 </div>
             </div>
@@ -138,35 +135,64 @@
                 The name comes from a Lakota word : čhuwí. It is defined as the upper back of the body.<br>
                 Shuwee is aimed to manage website data in a <abbr title="Keep it simple, stupid">KISS</abbr> way.
             </div>
-{#
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    Picture
+
+            <div class="row feature">
+                <div class="col-xs-12 col-md-6 description">
+                    <h2>Stupidly simple !</h2>
+                    <p>
+                        An simple <abbr title="User Interface">UI</abbr> helps users focus on tasks they need to accomplish.
+                        That's why Shuwee focus only on the most common tasks.
+                    </p>
+                    <p>
+                        The more simplicity, the more efficiency.
+                    </p>
+
                 </div>
-                <div class="col-xs-12 col-md-6">
-                    <h2>Easy to setup</h2>
-                    Text
-                </div>
+                <figure class="col-xs-12 col-md-6">
+                    <img src="http://placehold.it/670x380">
+                    <figcaption class="figure-caption">Clean content overview</figcaption>
+                </figure>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6 col-md-push-6">
-                    Picture
+            <div class="row feature">
+                <div class="col-xs-12 col-md-6 col-md-push-6 description">
+                    <h2>What's in the box ?</h2>
+
+                    <h3>Efficiency</h3>
+                    <p>
+                        <abbr title="Create, Read, Update, Delete">CRUD</abbr> operations,
+                        datagrid,
+                        backend authors permissions management,
+                        to the point design
+                        ...
+                    </p>
+                    <h3>Sweetness</h3>
+                    <p>
+                        Form widgets (Help text, markdown editor,...),
+                        Clean and light <abbr title="User Interface">UI</abbr>,
+                        Responsive design,
+                        Open Source,
+                        brandable
+                        ...
+                    </p>
                 </div>
-                <div class="col-xs-12 col-md-6 col-md-pull-6">
-                    <h2>Easy to use</h2>
-                    Text
-                </div>
+                <figure class="col-xs-12 col-md-6 col-md-pull-6">
+                    <img src="http://placehold.it/670x380">
+                    <figcaption class="figure-caption">Comprehensive forms</figcaption>
+                </figure>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    Picture
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <h2>Easy to use</h2>
-                    Text
-                </div>
-            </div>
-#}
+
+            <p class="text-center">
+                <a class="btn btn-primary" href="#!/shuwee">Discover Shuwee</a>
+            </p>
+        </div>
+    </section>
+
+    <section class="slide" id="simplicity">
+        <div class="container">
+            <blockquote>
+                <p>Nature is pleased with simplicity. And nature is no dummy</p>
+                <footer>Isaac Newton</footer>
+            </blockquote>
         </div>
     </section>
 
