--- a/www/web/scss/components/_nav.scss
+++ b/www/web/scss/components/_nav.scss
@@ -35,16 +35,19 @@ nav {
   .nav {
     > li {
       > a {
-        font-weight: 600;
+        transition: none;
+
+        color: #fff;
         &:hover, &:focus {
           background-color: transparent;
-          text-decoration: underline;
         }
       }
 
       &.active {
         > a {
+          font-weight: 700;
           color: #fff;
+          text-decoration: underline;
         }
       }
     }
